Added admin pass in env

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ SMTP_PORT=587
 SMTP_USERNAME="sports@jitnagpur.edu.in"
 SMTP_PASSWORD="gzxgjoiwdogakikk"
 MAIL_SENDER="sports@jitnagpur.edu.in"
+ADMIN_PASSWORD=441106
